--- a/workflows/GTEx_v8_specificity.Rmd
+++ b/workflows/GTEx_v8_specificity.Rmd
@@ -18,7 +18,7 @@ library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
 
-> Code to generate this is originally from the paper [Bryois et al.](https://www.nature.com/articles/s41588-020-0610-9), available at: https://github.com/jbryois/scRNA_disease/blob/master/Code_Paper/Code_GTEx/get_GTEx_input.md. The original code has been modified below to: (1) Include all genes, as opposed to including only protein-coding genes; (2) not to add gene co-ordinates; (3) to make some column names more human-readable i.e. in the modified code below, what was "Lvl5" ("SMTSD" in GTEx) is now referred to as "Tissue", and what was "Tissue" ("SMTS" in GTEx) is referred to as "Organ".
+> Code to generate this is originally from the paper [Bryois et al.](https://www.nature.com/articles/s41588-020-0610-9), available at: https://github.com/jbryois/scRNA_disease/blob/master/Code_Paper/Code_GTEx/get_GTEx_input.md. The original code has been modified below to: (1) Include all genes, as opposed to including only protein-coding genes; (2) remove brain cortex and brain cerebellum to reduce redundancy; (3) not to add gene co-ordinates; (3) to make some column names more human-readable i.e. in the modified code below, what was "Lvl5" ("SMTSD" in GTEx) is now referred to as "Tissue", and what was "Tissue" ("SMTS" in GTEx) is referred to as "Organ".
 
 # Load Data
 
@@ -61,12 +61,20 @@ exp <-
   inner_join(tissues)
 ```
 
-We then drop tissues with less than 100 samples, testis (gene expression outlier), non natural tissues (e.g. EBV-transformed lymphocytes and cultured fibroblasts) and then take the average expression for the different tissues that belong to the same organ.
+We then drop tissues with: 
+    - Less than 100 samples
+    - Testis (gene expression outlier)
+    - Non natural tissues (e.g. EBV-transformed lymphocytes and cultured fibroblasts)
+    - Brain cortex and Brain cerebellum (using instead the more specific anterior cingulate cortex, frontal cortex and cerebellar hemisphere) to reduce redundancy across brain regions.
+We then take the average expression for the different tissues that belong to the same organ.
 
 ```{r}
+
+tissues_to_exclude <- c("Testis", "Brain - Cerebellum", "Brain - Cortex", "Cells - EBV-transformed lymphocytes", "Cells - Cultured fibroblasts")
+
 exp_per_organ <- 
   exp %>% 
-  dplyr::filter(drop == FALSE) %>% 
+  dplyr::filter(Nsample >= 100, !Tissue %in% tissues_to_exclude) %>%
   dplyr::group_by(Organ,gene_id,Description) %>% 
   dplyr::summarise(mean_expr = mean(Expr))
 
@@ -141,5 +149,5 @@ exp_tissue <-
   dplyr::mutate(specificity= mean_expr/sum(mean_expr)) %>% 
   dplyr::ungroup()
 
-saveRDS(exp_tissue, "../specificity_matrices/GTEx_v8.Rds")
+saveRDS(exp_tissue, "../specificity_df/GTEx_v8.Rds")
 ```
